# scipion-em-cryocare

./: CHANGES.txt  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_and_tag.yml
cryocare/: __init__.py  bibtex.py  constants.py  objects.py  protocols.conf  protocols.py  utils.py  wizards.py
cryocare/protocols/: __init__.py  protocol_base.py  protocol_denoise.py  protocol_load_model.py  protocol_load_train_data.py  protocol_predict.py  protocol_prepare_training_data.py  protocol_training.py
cryocare/tests/: __init__.py  test_cryoCARE_imports.py  test_cryoCARE_workflow.py  test_prepare_training_data.py  test_training.py
